--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h2>Kỹ năng</h2>
                     </div>
                    <ul>
-                    <li>Kỹ năng chuyên môn: linh kiện điện tử, hàn mạch, sử dụng thành thạo Altium</li>
+                    <li>Kỹ năng chuyên môn: linh kiện điện tử, hàn mạch, sử dụng được Altium, Autocad</li>
                     <li>Kỹ năng tin học : Sử dụng thành thạo các công cụ Word, Excel, Power Point, lập trình giao diện website(front-end)</li>
                     <li>Kỹ năng làm việc nhóm, teamwork, kỹ năng đưa ra quyết định</li>
                     <li>Ham học hỏi, chăm chỉ, nhiệt tình trong công việc</li>
