--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="box-header d-flex justify-content-between align-items-center" data-aos="fade-left" data-aos-duration="1200">
                 <div class="header-left">
                     <h2 class="name font-weight-700">Nguyễn Văn An</h2>
-                    <p class="title font-weight-500">Ứng tuyển vị trí: Kỹ sư điện - điện tử</p>
+                    <p class="title font-weight-500">Ứng tuyển vị trí: Nhân viên thi công cơ điện</p>
                 </div>
                 <div class="header-right">
                     <img src="./img/avatar.jpg" alt="avatar" class="avatar">
